# Pixel-Bot

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AVVIA_PB032_OPENAI.cmd  AVVIA_PB033_REPOSITORY_INTELLIGENCE.cmd  CONSOLIDA_REPOSITORY_PB030.cmd  CREA_PIXEL_BOT_APP.cmd  PixelBotApp.cs  README.md  RUN_AUTO_005_2.ps1  pyproject.toml  pytest.ini  requirements.txt  start_gui.ps1
.pixelbot_updates/: PB-033.3.installed  PB-034.installed  PB-035.installed  PB-036.installed
PB033_1_Checklist_Enforcement/: INSTALLA_PB033_1.cmd  INSTALLA_PB033_1.ps1  LEGGIMI.txt  pixelbot_brain_bridge.py
docs/: API.md  ARCHITECTURE.md  AUTONOMOUS_UPDATE.md  MAGI.md  MVP.md  PB-054-ARCHITECTURE-AUDIT.md  PB-055-AUTO-EVOLUTION-BUTTON.md  PB-055.1-LAUNCH-BUTTON-HOTFIX.md  PB-055.2-DEVELOPER-AGENT-PROBE-HOTFIX.md  ROADMAP.md  SELF_UPDATE.md  SELF_UPDATE_DEMO.md  SPRINTS.md  STATUS.md
launcher/: Invoke-PixelBotRepositoryConsolidation.ps1  PixelBotApp.cs  RUN_AUTO_EVOLUTION.ps1  RUN_PB031_AUTO_ADVANCE.ps1  RUN_PIXEL_BOT.ps1  Write-PixelBotDiagnosticSummary.ps1  pixelbot_brain_bridge.py
manual_tests/: test_executor.py
src/: action_executor.py  command_parser.py  console.py  main.py  mouse_controller.py  safety.py  task_loader.py  task_runner.py  test_keyboard.py  test_mouse.py  test_mouse_move.py
tasks/: AUTO-002-post-change-magi.json  AUTO-004-task-risk-scoring.json  AUTO-005-1-framework-consistency-and-failure-registry.json  AUTO-005-2-failure-registry-initialization.json  AUTO-005-cleanup-pixelbot-backups.json  CORE-001-foundation.json  DESK-002A-mouse-controller.json  (+16 more)
(+125 files in other folders)
